fixed margin on small screen sizes...

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,7 +287,7 @@
 
     main section {
         width: auto;
-        margin: 0 1rem 0 1rem;
+        margin: 0 1rem 1rem 1rem;
     }
 
     .gallery h1 {
@@ -311,7 +311,7 @@
     }
 
     .bio .img_box {
-        margin: 0;
+        margin: 0 0 25px 0;
         float: none;
     }
 
@@ -319,15 +319,3 @@
         width: 100%;
     }
 }
-
-/* @media screen and (min-width: 600px) {
-    
-    header section logo {
-        width: 100%;
-    }
-
-    nav {
-        text-align: center;
-        float: none;
-    }
-} */
